RESOLVED FIXED71562
[EFL] DRT: Fix the order of the items in the dumped history list.
https://bugs.webkit.org/show_bug.cgi?id=71562
Summary [EFL] DRT: Fix the order of the items in the dumped history list.
Raphael Kubo da Costa (:rakuco)
Reported 2011-11-04 08:22:58 PDT
[EFL] DRT: Fix the order of the items in the dumped history list.
Attachments
Patch (6.27 KB, patch)
2011-11-04 08:30 PDT, Raphael Kubo da Costa (:rakuco)
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-11-04 08:30:22 PDT
WebKit Review Bot
Comment 2 2011-11-04 14:04:28 PDT
Comment on attachment 113659 [details] Patch Clearing flags on attachment: 113659 Committed r99318: <http://trac.webkit.org/changeset/99318>
WebKit Review Bot
Comment 3 2011-11-04 14:04:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.