[EFL] DRT: Fix the order of the items in the dumped history list. https://bugs.webkit.org/show_bug.cgi?id=71562

It did not make much sense to hold the history list in a map, as we do not need
the keys. And the printed items must be sorted by target, which is more easily
done with a vector.

Should make tests such as http/tests/navigation/error404-frames.html pass.

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-11-04
Reviewed by Antonio Gomes.

Source/WebKit/efl:

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::childHistoryItems):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

* DumpRenderTree/efl/DumpHistoryItem.cpp:
(compareHistoryItemsByTarget):
(dumpHistoryItem):

Canonical link: https://commits.webkit.org/87905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99318 268f45cc-cd09-0410-ab3c-d52691b4dbfc